--- a/GameLauncherAdmin/Strings/en-us/Resources.resw
+++ b/GameLauncherAdmin/Strings/en-us/Resources.resw
@@ -118,4 +118,10 @@
   <data name="SettingsPage_PrivacyTermsLink.NavigateUri" xml:space="preserve">
     <value>https://YourPrivacyUrlGoesHere/</value>
   </data>
+  <data name="Shell_CollectionDetail.Content" xml:space="preserve">
+    <value>CollectionDetail</value>
+  </data>
+  <data name="Shell_VideoIntro.Content" xml:space="preserve">
+    <value>VideoIntro</value>
+  </data>
 </root>
